# nymph

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs
src/factorization/: nmf.rs  seeding.rs
