[package]
name = "nymph"
version = "0.1.0"
authors = ["Rhys Newell <r.newell@uq.edu.au>"]
license = "GPL-3.0"
description = "Non-negative matrix factorization in Rust"
homepage = "https://rhysnewell.github.io/nymph/"
repository = "https://github.com/rhysnewell/nymph"
documentation = "https://github.com/rhysnewell/nymph"
readme = "README.md"
exclude = [
  "tests/*",
  "target/",
  ".idea/",
  ".gitignore",
  ".travis.yml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
ordered-float = "1"
ndarray = { version = "0.13.0", features = ["rayon"] }
ndarray-linalg = { version = "0.12" }
openblas-src = "0.7"
rayon = "1.2.*"
approx = "0.3"
rand = "0.6.*"
log = "0.4.*"


